# starchild

./: .gitignore  .mcp.json  AGENTS.md  CONVERSATION_LOG.md  PRD.md  README.md  REGISTRATION.md  index.html  package-lock.json  package.json  synthesis_dashboard.txt
.github/workflows/: build.yml
agency/: .gitignore  README.md  agency.sh  backlog.md  board.md  inbox.md  metrics.md  run-agent.sh  standup.md
agency/agents/dev-alpha/: AGENT.md
agency/agents/dev-beta/: AGENT.md
agency/agents/dev-gamma/: AGENT.md
agency/agents/devops/: AGENT.md
agency/agents/product-owner/: AGENT.md
agency/agents/qa/: AGENT.md
agency/agents/reviewer/: AGENT.md
agency/agents/tech-lead/: AGENT.md
docs/: ARCHITECTURE.md  spark-research.md
landing/: index.html
relay/: package-lock.json  package.json  register-schema.mjs  wrangler.toml
relay/src/: index.ts
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: attestation.rs  e2ee.rs  lib.rs  main.rs  tts.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/game/: mod.rs
src-tauri/src/knowing/: mod.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/telegram/: mod.rs
src-tauri/src/whatsapp/: mod.rs
src/assets/: art-prompts.md  meditation.webm
src/assets/videos/: skilltree.webm  starchild1.webm  starchild2.webm  starchild3.webm  starchild4.webm  starchild5.webm
src/chain/: abi.ts  attestation.ts  hypercert.ts  identity.ts  index.ts  wallet.ts
src/components/: ActiveQuest.tsx  ChatWindow.tsx  ErrorBoundary.tsx  Onboarding.tsx  QuestBoard.tsx  QuestSuggestions.tsx  Settings.tsx  SkillTree.tsx  SkylineBackground.tsx  SparkTest.tsx  StarchildAvatar.tsx  UserProfile.tsx
telegram-bot/: index.mjs  package-lock.json  package.json
tests/e2e/: conversation-routes.ts  llm-judge.ts  prompt-engine.ts  quality-checks.ts  run-verify.ts  run.ts  venice-client.ts  verify-checks.ts  verify-routes.ts
website/: package-lock.json  package.json
website/public/videos/: starchild3.webm  starchild5.webm
website/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
website/src/app/origin/: page.tsx
website/src/components/: Download.tsx  FeatureSection.tsx  Hero.tsx  Navbar.tsx  Privacy.tsx  VideoPlayer.tsx
whatsapp-bot/: index.mjs  package-lock.json  package.json
